# sxsw-hackathon-aibe

./: .gitignore  pyproject.toml
examples/: check_resp_example.json  curl-ngrok-url.txt
src/: data_models.py  extract_responsibilities.py  main.py  test_dspy.py  test_google_meet.py
